style.css
.row {
  width: 992px;
  margin-left: auto;
  margin-right: auto;
  margin-top: 100px;
}

/* BLOCCO LEZIONI */
#lezioni .row>.left,
#lezioni .row>.right {
  width: 50%;
  float: left;
}

#lezioni .row img {
  /* per centrare orizzontalmente */
  display: block;
  margin-right: auto;
  margin-left: auto;
}

#lezioni {
  text-align: center;
}

/* BLOCCO STEPS */
#steps .row>.left,
#steps .row>.central,
#steps .row>.right {
  float: left;
  width: 33%;
}

#steps {
  text-align: center;
}

/* BLOCCO PERCHE */
#why {
  text-align: center;
}

#why .row>.first,
#why .row>.second,
#why .row>.third {
  width: 100%;
  margin-top: 80px;
}

#why .row img {
  background-color: #428bca;
  border-radius: 50%;
  padding: 30px
}

/* COMMON */
.row::after {
  content: '';
  display: table;
  clear: both;
}

.container.grey {
  background-color: #f9f9f9;
}

img {
  height: 200px;
}

.clear {
  clear: both;
}

/*Media Query esercizio base*/

@media all and (max-width: 420px){
  /*regole generali*/
  *{
    margin: 0;
    padding: 0;
  }
  .row {
    width: 100vw;
    margin-top: 0px;
  }
  img {
    height: 100px;
  }


  /*media query per la sezione delle lezioni*/
  
  #lezioni .row>.left,
  #lezioni .row>.right {
    float: none;
    width: calc(100vw - 20px);
    margin: 15px 10px;
    font-size: 12px;
  }

  #lezioni .row{
    background-color: #f2f2cd;
    
  }

  #lezioni .row h1{
    margin-top: 0px;
  }

  /*media query per la sezione steps*/

  #steps .row>.left,
  #steps .row>.central,
  #steps .row>.right {
    float: none;
    width: calc(100vw - 20px);
    margin: 20px 0px;
    font-size: 12px;
    margin: 10px 10px;
}
  #steps .row{
   background-color: #fff;
 }

  #steps .central{
   margin: 20px 0px;
 }

 /*media query per la sezione why*/ 

  #why .row>.first,
  #why .row>.second,
  #why .row>.third {
    width: calc(100vw - 20px);
    margin-top: 20px;
    font-size: 12px;
    margin: 10px  10px;
  }

  #why .row>.third{
    margin-bottom: 20px;
}
  #why .row img {
    background-color: #428bca;
    border-radius: 50%;
    padding: 30px;
    height: 50px;
}

#why .row{
    background-color: #f2f2cd;
}

}

/*Media Query esercizio bonus*/
@media all and (min-width: 421px) and (max-width: 810px){
  *{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
  }
  .row {
    width: 100vw;
    margin-top: 0px;
    /*aggiunto per coprire il bug di chrome che faceva comprarire la scroll bar anche se niente andava in overflow*/
    overflow-x: hidden; 
  }

  img{
    height: 120px; 
  }

  h3{
    margin: 10px 0px;
  }


  /*media query per la sezione delle lezioni*/
  #lezioni .row>.left,
  #lezioni .row>.right {
    width: 50vw;
    font-size: 15px;
    margin: 50px 0px;
    padding: 0px 15px;
  }
  
  #lezioni .row{
    background-color: #f2f2f2ff; 
  }

  /*media query per la sezione steps*/
  #steps .row{
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    align-content: center;
  }

  #steps .row h1{
    align-self: center;
    flex-basis: 100vw;
  }
  #steps .row>.left,
  #steps .row>.central,
  #steps .row>.right{
    flex-basis: 50vw;
    margin: 50px 0px;
    padding: 0px 15px;
  }

  #steps .row{
    width: 100vw;
    background-color: #fff; 
  }
  /*media query per la sezione why*/
  #why .row{
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    align-content: center;
  }

  #why .row h1{
    align-self: center;
    flex-basis: 100vw;
  }
  #why .row>.first,
  #why .row>.second,
  #why .row>.third{
    flex-basis: 50vw;
    margin: 50px 0px;
    padding: 0px 15px;
  }

  #why .row>.first{
    order: 1;
  }

  #why .row>.second{
    order: 3;
  }

  #why .row>.third{
    order: 2;
  }
  #why hr{
    display: none;
  }

  #why .row{
    width: 100vw;
    background-color: #f2f2f2ff; 
  }
}

